disable user select, attempt to stop text selection on mobile

--- a/src/styles/components/_range-slider.scss
+++ b/src/styles/components/_range-slider.scss
@@ -1,6 +1,7 @@
 .range-slider__container {
   width: 100%;
   height: 100%;
+  user-select: none;
 }
 
 .range-slider__title-container {
